<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonRoute0PlayStop"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestStopPlay"
        android:text="@string/route_0_play_stop"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute1Play" />

    <Button
        android:id="@+id/buttonRoute0CaptureStop"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestStopRecord"
        android:text="@string/route_0_capture_stop"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute1Capture" />

    <Button
        android:id="@+id/buttonRoute0Capture"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestRecord"
        android:text="@string/route_0_capture"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRoute1Capture"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestRecord"
        android:text="@string/route_1_capture"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute0Capture" />

    <Button
        android:id="@+id/buttonRoute1CaptureStop"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestStopRecord"
        android:text="@string/route_1_capture_stop"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute0CaptureStop" />

    <Button
        android:id="@+id/buttonExchangeP"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#8BC34A"
        android:onClick="audioTestPlay"
        android:shadowColor="@color/white"
        android:text="@string/cdp"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute1PlayStop" />

    <Button
        android:id="@+id/buttonExchangeC"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#8BC34A"
        android:onClick="audioTestRecord"
        android:shadowColor="@color/white"
        android:text="@string/cdc"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute1CaptureStop" />

    <Button
        android:id="@+id/buttonReadFile"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8BC34A"
        android:onClick="FileIOonClicked"
        android:shadowColor="@color/white"
        android:text="@string/readfile"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExchangeC" />

    <Button
        android:id="@+id/buttonWriteFile"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#8BC34A"
        android:onClick="FileIOonClicked"
        android:shadowColor="@color/white"
        android:text="@string/writefile"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExchangeP" />

    <Button
        android:id="@+id/buttonRoute1PlayStop"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestStopPlay"
        android:text="@string/route_1_play_stop"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute0PlayStop" />

    <Button
        android:id="@+id/buttonRoute0Play"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestPlay"
        android:text="@string/route_0_play"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRoute1Play"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#2196F3"
        android:onClick="audioTestPlay"
        android:text="@string/route_1_play"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute0Play" />
</androidx.constraintlayout.widget.ConstraintLayout>